[package]
name = "eye"
description = "Cross platform camera capture and control"
version = "0.5.0"
authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository= "https://github.com/raymanfx/eye-rs"

[features]
default = ["jpeg"]
jpeg = ["jpeg-decoder"]

[[example]]
name = "glium"

[[example]]
name = "notan"

[dependencies]
eye-hal = { version = "0.2.0", path = "../eye-hal" }
ffimage = "0.10.0"
ffimage_yuv = "0.10.0"

jpeg-decoder = { version = "0.2.1", optional = true }

[dev-dependencies]
glium = "0.31.0"
gettid = "0.1"
lazy_static = "1.5"
object-pool = "0.6"
futures = "0.3"
log = { version = "0.4", features = ["std", "serde"] }
pretty_env_logger = "0.5"
tokio = { version = "1", features = ["full"] }
crossbeam = "0.8"
notan = { path = "../../../modules/notan", features = [
  "glyph",
  "egui",
  "text",
  "extra",
  "links",
  "drop_files",
  "clipboard",
  "save_file",
  "texture_to_file",
  "serde"
] }

